[Starts #166649326] feature(SignUp UI ): add the page title

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,8 +11,9 @@
     <header>
 <nav>
     <div class="navigation">
-        <a href="#">My Logo</a>
+        <a href="#">Sign Up</a>
         <div class="header-right">
+          <a href="#" class="about"></a>
           <a href="#" class="about">About</a>
           <a href="#">Contact</a>
           <a href="#">Privacy Policy</a>
