--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,9 +11,8 @@
     <header>
 <nav>
     <div class="navigation">
-        <a href="#">Sign Up</a>
+        <a href="#">Property Pro Lite</a>
         <div class="header-right">
-          <a href="#" class="about"></a>
           <a href="#" class="about">About</a>
           <a href="#">Contact</a>
           <a href="#">Privacy Policy</a>
