feature(change image directory): [finishes #166649326]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -28,21 +28,21 @@
     </div>
     <div class="steps">
       <div class="step">
-        <img src="C:\Users\user\Desktop\Drawables\AI_user.png" class="icon">
+        <img src="AI_user.png" class="icon">
         <div class="content">
           <p>Step1:</p>
           <p>Account setup</p>
         </div>
       </div>
       <div class="step">
-          <img src="C:\Users\user\Desktop\Drawables\upload3.png" class="icon">
+          <img src="upload3.png" class="icon">
           <div class="content">
             <p>Step2:</p>
             <p>Upload property</p>
           </div>
         </div>
         <div class="step">
-            <img src="C:\Users\user\Desktop\Drawables\sales2.png" class="icon">
+            <img src="sales2.png" class="icon">
             <div class="content">
               <p>Step3:</p>
               <p>Skyrocket sales</p>
