feature(navigation): make the navigation responsive. navigation fits on mobile [finishes #166649326]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -10,14 +10,14 @@
 <body>
     <header>
 <nav>
-    <div class="navigation">
-        <a href="#" class="logo">Property Pro </a>
-        <a href="#">Why Property Pro ?</a>
-        <a href="#">Join us</a>
-        <div class="header-right">
-          <a href="#" class="sign-in">Sign in</a>
-          <a href="#" class="sign-up">Sign Up</a>
-    </div>
+  <div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Property Pro</a>
+    <a href="#news">Why Property Pro?</a>
+    <a href="#contact">Join Us</a>
+    <a href="#about" class="signup">Sign Up</a>
+    <a href="#about">Sign In</a>
+    <a href="javascript:void(0);" class="icon">&#9776;</a>
+  </div>
 </nav>
     </header>
     <main>
@@ -103,6 +103,7 @@
         <div class="navigation">
             <a href="#" >About </a>
             <a href="#">Contact </a>
+            <a href="#">Policy </a>
             
         </div>
     </nav>
