feature(changed a text) [starts #166657831]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class="intro-div">
-      <p class="intro">Let's Sign You In</p>
+      <p class="intro">Let's Sign You In !</p>
       <div class="lock">
           <img src="locked.png" alt="LOCKED">
       </div>
