feature(sign up): createad a hyperlink to the sign in page [finishes #166649326]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -92,7 +92,7 @@
                       <input type="text" class="myAnswer"> <span>Try another</span>
                     </div>
                   </div>
-            <p>Already registered? <a href="#">Login here</a></p>
+            <p>Already registered? <a href="signin.html">Login here</a></p>
           </div>
       
 </form>
