feature(add navigation links) [finishes #166649326]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -11,11 +11,11 @@
     <header>
 <nav>
   <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Property Pro</a>
-    <a href="#news">Why Property Pro?</a>
-    <a href="#contact">Join Us</a>
-    <a href="#about" class="signup">Sign Up</a>
-    <a href="#about">Sign In</a>
+    <a href="index.html" class="active">Property Pro</a>
+    <a href="about.html">Why Property Pro?</a>
+    <a href="signup.html">Join Us</a>
+    <a href="#.html" class="signup">Sign Up</a>
+    <a href="signin.html">Sign In</a>
     <a href="javascript:void(0);" class="icon">&#9776;</a>
   </div>
 </nav>
