feature(property upload): delete side bar. correct navigation links. make upload form responsive [finishes #166657849]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -13,9 +13,9 @@
   <div class="topnav" id="myTopnav">
     <a href="#home" class="active">Property Pro</a>
     <a href="#news">Why Property Pro?</a>
-    <a href="#contact">Join Us</a>
-    <a href="#about">Sign Up</a>
-    <a href="#about" class="signin">Sign In</a>
+    <a href="signup.html">Join Us</a>
+    <a href="signup.html">Sign Up</a>
+    <a href="signin.html" class="signin">Sign In</a>
     <a href="javascript:void(0);" class="icon">&#9776;</a>
   </div>
 </nav>
