--- a/UI/signup.html
+++ b/UI/signup.html
@@ -14,7 +14,7 @@
     <a href="index.html" class="active">Property Pro</a>
     <a href="about.html">Why Property Pro?</a>
     <a href="signup.html">Join Us</a>
-    <a href="#.html" class="signup">Sign Up</a>
+    <a href="signup.html" class="signup">Sign Up</a>
     <a href="signin.html">Sign In</a>
     <a href="javascript:void(0);" class="icon">&#9776;</a>
   </div>
