--- a/UI/upload.html
+++ b/UI/upload.html
@@ -14,9 +14,9 @@
   <div class="topnav" id="myTopnav">
     <a href="#home" class="active">Property Pro</a>
     <a href="#news">Why Property Pro?</a>
-    <a href="signup.html">Join Us</a>
-    <a href="signup.html">Sign Up</a>
-    <a href="signin.html" class="signin">Sign In</a>
+    <a href="signup.html">Manage Ads</a>
+    <a href="signup.html">Log Out</a>
+    <a href="signin.html" class="signin">Upload</a>
     <a href="javascript:void(0);" class="icon">&#9776;</a>
   </div>
 </nav>
