--- a/UI/index.html
+++ b/UI/index.html
@@ -45,8 +45,8 @@
          </div>
         <div class="column-right">
              <div class="right-sidebar">
-                <div class="property">
-                  
+                <div class="featured">
+                <h3>Featured</h3>
                 </div>
              </div>
         </div>
