feature(users can select specific property type): [starts #]

--- a/UI/index.html
+++ b/UI/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="select-type">
-                <select name="category" id="category">
+                <select name="categories" id="categories">
                         <option selected disabled>  View categories </option>
                     <option value="Two-bedroom-flat">Two-bedroom flat</option>
                     <option value="Three-bedroom-flat">Three-bedroom flat</option>
