feature(users can view specific property) [starts #166657958]

--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -33,24 +33,7 @@
                     <option value="Five-bedroom-duplex">Five-bedroom duplex</option>
                 </select>
         </div>
-      <div class="cover-image">
-          <img src="cover4.png">
-      </div>      
-      <P id="caption">Fresh Arrivals</P> 
-          <div class="rows">
-            <div class="column-left">
-          <div class="left-sidebar">
-
-          </div>
-         </div>
-        <div class="column-right">
-             <div class="right-sidebar">
-                <div class="featured">
-                <h3>Featured</h3>
-                </div>
-             </div>
-        </div>
-      </div>                       
+                      
     </main>
 
     <footer>
@@ -62,7 +45,7 @@
         </div>
     </nav>
     </footer>
-    <script src="index.js">
+    <script src="view_property.js">
     </script>
 </body>
 </html>
