feature(users can view specific property) [finishes #166657958]

--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -7,6 +7,7 @@
     <title>Welcome to Property Pro Lite</title>
     <link rel="stylesheet" type="text/css" href="signin.css">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="view_property.css">
 </head>
 <body>
     <header>
@@ -33,7 +34,47 @@
                     <option value="Five-bedroom-duplex">Five-bedroom duplex</option>
                 </select>
         </div>
-                      
+        <div class="columns">
+            <div class="left-column">
+  <div class="prop-image-wrapper">
+           <div class="inner-image-wrapper">
+               <img src="photo_profile.jpg">
+           </div>
+  </div>
+
+  <div class="description-wrapper">
+      <p>Description</p>
+      <p>This house is a product of painstakingly architectural design.It boasts of 5 well decorated rooms with jaccuzi in each room. This house is located on a mountain with a nice view of the city..</p>
+  </div>
+        </div>
+            <div class="right-column">
+        <div class="property-details">
+<p>N 50,000</p>
+<p>Rent for 2 years</p>
+<p>Awka , Anambra</p>
+
+        </div>
+        <div class="seller-details">
+                <p>Contact seller</p>
+                <div class="contact-icon">
+<div class="icon-wrapper"><img src="userIcon.png"></div>
+<div class="contact-name"><p>Christian</p></div>
+                </div>
+                <div class="email-user"><span>Email Seller</span></div>
+                <div class="contact-icon">
+                        <div class="icon-wrapper"><img src="phone.png"></div>
+                        <div class="contact-name"><p>08745698542</p></div>
+                                        </div>
+
+                </div>
+                <div class="property-details">
+                        <p></p>
+                        <p>Location</p>
+                        <p>Awka , Anambra</p>
+                        <div class="map-wrapper"><img src="googlemap.jpg" alt=""></div>
+                                </div>
+            </div>
+        </div>    
     </main>
 
     <footer>
