feature(users can report a posted ad) [finishes #166756884]

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -47,7 +47,7 @@
                   <input type="password" id="password" name="user_email" placeholder=" password">
               </div>         
       
-                  <button type="submit">sign In</button>
+                  <button type="submit" class="sign-in">sign In</button>
                   <p>Don't have an account? <a href="signup.html">Sign up here</a> or <a href="javascript:void(0)" class="recover-password">Recover Password</a> </p>
                 
               <div class="hide">
