feature(agents can mark property as sold): [finishes #166657884]

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header>
-<nav>
-  <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Property Pro</a>
-    <a href="about.html">Why Property Pro?</a>
-    <a href="signup.html">Join Us</a>
-    <a href="signup.html" class="signup">Sign Up</a>
-    <a href="signin.html">Sign In</a>
-    <a href="javascript:void(0);" class="icon">&#9776;</a>
-  </div>
-</nav>
+            <nav>
+                    <div class="topnav" id="myTopnav">
+                      <a href="#home" class="active">Property Pro</a>
+                      <a href="#news">Why Property Pro?</a>
+                      <a href="signup.html">Manage Ads</a>
+                      <a href="signup.html">Log Out</a>
+                      <a href="upload.html" class="signin">Upload</a>
+                      <a href="javascript:void(0);" class="icon">&#9776;</a>
+                    </div>
+                  </nav>
 <div id="post-options-hidden">
     <div class="icon-holder">
             <div class="delete-icon-wrapper">
