feature(agents can update-property) [finishes #166657862]

--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome to Property Pro Lite</title>
+    <title>5 bedroom duplex</title>
     <link rel="stylesheet" type="text/css" href="signin.css">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="view_property.css">
