--- a/UI/signin.html
+++ b/UI/signin.html
@@ -11,8 +11,8 @@
     <header>
 <nav>
   <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Property Pro</a>
-    <a href="#news">Why Property Pro?</a>
+    <a href="index.html" class="active">Property Pro</a>
+    <a href="#news"></a>
     <a href="signup.html">Join Us</a>
     <a href="signup.html">Sign Up</a>
     <a href="signin.html" class="signin">Sign In</a>
