--- a/UI/signup.html
+++ b/UI/signup.html
@@ -12,7 +12,7 @@
 <nav>
   <div class="topnav" id="myTopnav">
     <a href="index.html" class="active">Property Pro</a>
-    <a href="about.html">Why Property Pro?</a>
+    <a href="about.html"></a>
     <a href="signup.html">Join Us</a>
     <a href="signup.html" class="signup">Sign Up</a>
     <a href="signin.html">Sign In</a>
