--- a/UI/update_property.html
+++ b/UI/update_property.html
@@ -15,11 +15,11 @@
     <header>
         <nav>
             <div class="topnav" id="myTopnav">
-                <a href="#home" class="active">Property Pro</a>
-                <a href="#news">Why Property Pro?</a>
-                <a href="signup.html">Manage Ads</a>
-                <a href="signup.html">Log Out</a>
-                <a href="signin.html" class="signin">Upload</a>
+                <a href="index" class="active">Property Pro</a>
+                <a href="#news"></a>
+                <a href="dashboard.html">Manage Ads</a>
+                <a href="signin.html">Log Out</a>
+                <a href="upload.html" class="signin">Upload</a>
                 <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
