chore(Add folders for different UI elements [finishes #166812278]

--- a/UI/dashboard.html
+++ b/UI/dashboard.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="signup.css">
-    <link rel="stylesheet" type="text/css" href="dashboard.css">
+    <link rel="stylesheet" type="text/css" href="styles/signup.css">
+    <link rel="stylesheet" type="text/css" href="styles/dashboard.css">
 </head>
 <body>
     <header>
@@ -23,13 +23,13 @@
 <div id="post-options-hidden">
     <div class="icon-holder">
             <div class="delete-icon-wrapper">
-                    <img src="dl2.png">
+                    <img src="images/icons/dl2.png">
             </div>
             <div class="update-icon-wrapper">
-                    <img src="update.png">
+                    <img src="images/icons/update.png">
             </div>
             <div class="marksold-icon-wrapper">
-                    <img src="sold.png">
+                    <img src="images/icons/sold.png">
             </div>
     </div>
     
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="right-column">
-                <div class="img-wrapper"><img src="img4.png"></div>
+                <div class="img-wrapper"><img src="images/photos/img4.png"></div>
                 </div>
         </div>
         <div class="property">
@@ -81,7 +81,7 @@
                   </div>
                 </div>
                 <div class="right-column">
-                    <div class="img-wrapper"><img src="img5.png"></div>
+                    <div class="img-wrapper"><img src="images/photos/img5.png"></div>
                     </div>
             </div>
             <div class="property">
@@ -98,7 +98,7 @@
                       </div>
                     </div>
                     <div class="right-column">
-                        <div class="img-wrapper"><img src="img6.png"></div>
+                        <div class="img-wrapper"><img src="images/photos/img6.png"></div>
                         </div>
                 </div>
                 <div class="property">
@@ -115,7 +115,7 @@
                           </div>
                         </div>
                         <div class="right-column">
-                            <div class="img-wrapper"><img src="img7.png"></div>
+                            <div class="img-wrapper"><img src="images/photos/img7.png"></div>
                             </div>
                     </div>
                     <div class="property">
@@ -132,7 +132,7 @@
                               </div>
                             </div>
                             <div class="right-column">
-                                <div class="img-wrapper"><img src="img8.png"></div>
+                                <div class="img-wrapper"><img src="images/photos/img8.png"></div>
                                 </div>
                         </div>
       <article>
@@ -150,6 +150,6 @@
     </nav>
     </footer>
     
-    <script src="dashboard.js"></script>
+    <script src="javascript/dashboard.js"></script>
 </body>
 </html>
