--- a/UI/index.html
+++ b/UI/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to Property Pro Lite</title>
-    <link rel="stylesheet" type="text/css" href="signin.css">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="styles/signin.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
                 </select>
         </div>
       <div class="cover-image">
-          <img src="cover4.png">
+          <img src="images/photos/cover4.png">
       </div>      
       <P id="caption">Fresh Arrivals</P> 
           <div class="rows">
@@ -62,7 +62,7 @@
         </div>
     </nav>
     </footer>
-    <script src="index.js">
+    <script src="javascript/index.js">
     </script>
 </body>
 </html>
