--- a/UI/signin.html
+++ b/UI/signin.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sign In</title>
-  <link rel="stylesheet" type="text/css" href="signin.css">
+  <link rel="stylesheet" type="text/css" href="styles/signin.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
       <div class="intro-div">
         <p class="intro">Let's Sign You In ...</p>
         <div class="lock">
-          <img src="locked.png" alt="LOCKED">
+          <img src="images/icons/locked.png" alt="LOCKED">
         </div>
       </div>
     </article>
@@ -79,7 +79,7 @@
       </div>
     </nav>
   </footer>
-  <script src="signin.js">
+  <script src="javascript/signin.js">
   </script>
 </body>
 
