--- a/UI/signup.html
+++ b/UI/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign Up</title>
-    <link rel="stylesheet" type="text/css" href="C:\Property Pro Lite\UI\signup.css">
+    <link rel="stylesheet" type="text/css" href="styles/signup.css">
 </head>
 <body>
     <header>
@@ -28,21 +28,21 @@
     </div>
     <div class="steps">
       <div class="step">
-        <img src="AI_user.png" class="icon">
+        <img src="images/icons/AI_user.png" class="icon">
         <div class="content">
           <p>Step1:</p>
           <p>Account setup</p>
         </div>
       </div>
       <div class="step">
-          <img src="upload3.png" class="icon">
+          <img src="images/icons/upload3.png" class="icon">
           <div class="content">
             <p>Step2:</p>
             <p>Upload property</p>
           </div>
         </div>
         <div class="step">
-            <img src="sales2.png" class="icon">
+            <img src="images/icons/sales2.png" class="icon">
             <div class="content">
               <p>Step3:</p>
               <p>Skyrocket sales</p>
@@ -108,7 +108,7 @@
         </div>
     </nav>
     </footer>
-    <script src="C:\Property Pro Lite\UI\signup.js">
+    <script src="javascript/signup.js">
     </script>
 </body>
 </html>
