--- a/UI/update_property.html
+++ b/UI/update_property.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Update Property</title>
-    <link rel="stylesheet" type="text/css" href="signin.css">
-    <link rel="stylesheet" type="text/css" href="upload.css">
-    <link rel="stylesheet" type="text/css" href="update_property.css">
+    <link rel="stylesheet" type="text/css" href="styles/signin.css">
+    <link rel="stylesheet" type="text/css" href="styles/upload.css">
+    <link rel="stylesheet" type="text/css" href="styles/update_property.css">
 </head>
 
 <body>
@@ -57,36 +57,37 @@
                                     <input type="file" id="file-upload" accept=".gif, .jpg, .png, .jpeg">
                                     <div class="scrolling-wrapper" type="file">
                                         <div class="image-wrap">
-                                             <div class="close-button" ><img src="" title="delete this image" alt=""></div>
-                                            <img src="img3.png" id="property-image">
+                                            <div class="close-button"><img src="" title="delete this image" alt="">
+                                            </div>
+                                            <img  id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="img4.png " id="property-image" >
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img  id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img  title="delete this image" alt=""></div>
-                                            <img src="img5.png" id="property-image" >
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="img6.png" id="property-image">
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="addImage.png" id="property-image">
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="addImage.png" id="property-image">
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="addImage.png" id="property-image">
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                                <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="addImage.png" id="property-image">
+                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                     </div>
                                     <p>First picture will be used as the default display picture</p>
@@ -236,8 +237,8 @@
             </div>
         </nav>
     </footer>
-    <script src="upload.js"></script>
-    <script src="update_property.js"></script>
+    <script src="javascript/upload.js"></script>
+    <script src="javascript/update_property.js"></script>
 </body>
 
 </html>
