--- a/UI/upload.html
+++ b/UI/upload.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Upload Property</title>
-    <link rel="stylesheet" type="text/css" href="signin.css">
-    <link rel="stylesheet" type="text/css" href="upload.css">
+    <link rel="stylesheet" type="text/css" href="styles/signin.css">
+    <link rel="stylesheet" type="text/css" href="styles/upload.css">
 </head>
 <body>
     <header>
@@ -54,28 +54,28 @@
                             <div class="scrolling-wrapper" type="file">
                         <div class="image-wrapper">
                             
-                         <img src="addImage.png">
+                         <img src="images/icons/addImage.png">
                         </div>    
                         <div class="image-wrapper">
-                       <img src="addImage.png">
+                       <img src="images/icons/addImage.png">
                        </div>
                         <div class="image-wrapper">
-                              <img src="addImage.png">
+                              <img src="images/icons/addImage.png">
                             </div>
                          <div class="image-wrapper">
-                           <img src="addImage.png">
+                           <img src="images/icons/addImage.png">
                             </div>
                           <div class="image-wrapper">
-                          <img src="addImage.png">
+                          <img src="images/icons/addImage.png">
                            </div>
                         <div class="image-wrapper">
-                        <img src="addImage.png">
+                        <img src="images/icons/addImage.png">
                          </div>
                          <div class="image-wrapper">
-                                <img src="addImage.png">
+                                <img src="images/icons/addImage.png">
                                  </div>
                                  <div class="image-wrapper">
-                                        <img src="addImage.png">
+                                        <img src="images/icons/addImage.png">
                                          </div>
                             </div>
                             <p>First picture will be used as the default display picture</p>
@@ -223,7 +223,7 @@
         </div>
     </nav>
     </footer>
-    <script src="upload.js">
+    <script src="javascript/upload.js">
     </script>
 </body>
 </html>
