--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>5 bedroom duplex</title>
-    <link rel="stylesheet" type="text/css" href="signin.css">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="stylesheet" type="text/css" href="view_property.css">
+    <link rel="stylesheet" type="text/css" href="styles/signin.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <link rel="stylesheet" type="text/css" href="styles/view_property.css">
 </head>
 <body>
     <header>
@@ -38,7 +38,7 @@
             <div class="left-column">
   <div class="prop-image-wrapper">
            <div class="inner-image-wrapper">
-               <img src="photo_profile.jpg">
+               <img src="images/photos/photo_profile.jpg">
            </div>
   </div>
 
@@ -57,12 +57,12 @@
         <div class="seller-details">
                 <p>Contact seller</p>
                 <div class="contact-icon">
-<div class="icon-wrapper"><img src="userIcon.png"></div>
+<div class="icon-wrapper"><img src="images/icons/userIcon.png"></div>
 <div class="contact-name"><p>Christian</p></div>
                 </div>
                 <div class="email-user"><span>Email Seller</span></div>
                 <div class="contact-icon">
-                        <div class="icon-wrapper"><img src="phone.png"></div>
+                        <div class="icon-wrapper"><img src="images/iconsphone.png"></div>
                         <div class="contact-name"><p>08745698542</p></div>
                                         </div>
 
@@ -71,7 +71,7 @@
                         <p></p>
                         <p>Location</p>
                         <p>Awka , Anambra</p>
-                        <div class="map-wrapper"><img src="googlemap.jpg" alt=""></div>
+                        <div class="map-wrapper"><img src="images/photos/googlemap.jpg" alt=""></div>
                                 </div>
                                 <div class="report-ad"><a href="javascript:void(0);">report this ad</a></div>
                                 <form action="/report_post" method="POST" class="report-form form-hide">
@@ -106,7 +106,7 @@
         </div>
     </nav>
     </footer>
-    <script src="view_property.js" async>
+    <script src="javascript/view_property.js" async>
     </script>
 </body>
 </html>
