--- a/UI/index.html
+++ b/UI/index.html
@@ -1,68 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome to Property Pro Lite</title>
-    <link rel="stylesheet" type="text/css" href="styles/signin.css">
-    <link rel="stylesheet" type="text/css" href="styles/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Welcome to Property Pro Lite</title>
+  <link rel="stylesheet" type="text/css" href="styles/signin.css">
+  <link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
+
 <body>
-    <header>
-<nav>
-  <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Property Pro</a>
-    <a href="#news"></a>
-    <a href="dashboard.html">Manage Ads</a>
-    <a href="signin.html">Log Out</a>
-    <a href="upload.html" class="signin">Upload</a>
-    <a href="javascript:void(0);" class="icon">&#9776;</a>
-  </div>
-</nav>
-    </header>
-    <main>
-        <div class="select-type">
-                <select name="categories" id="categories">
-                        <option selected disabled>  View categories </option>
-                    <option value="Two-bedroom-flat">Two-bedroom flat</option>
-                    <option value="Three-bedroom-flat">Three-bedroom flat</option>
-                    <option value="Four-bedroom-flat">Four-bedroom flat</option>
-                    <option value="Mini-flat">Mini flat</option>
-                    <option value="Four-bedroom-duplex">Four-bedroom duplex</option>
-                    <option value="Five-bedroom-duplex">Five-bedroom duplex</option>
-                </select>
-        </div>
-      <div class="cover-image">
-          <img src="images/photos/cover4.png">
-      </div>      
-      <P id="caption">Fresh Arrivals</P> 
-          <div class="rows">
-            <div class="column-left">
-          <div class="left-sidebar">
-
-          </div>
-         </div>
-        <div class="column-right">
-             <div class="right-sidebar">
-                <div class="featured">
-                <h3>Featured</h3>
-                </div>
-             </div>
-        </div>
-      </div>                       
-    </main>
-
-    <footer>
-      <nav>
-        <div class="navigation">
-            <a href="#" >About </a>
-            <a href="#">Contact </a>
-            <a href="#">Policy </a>            
-        </div>
+  <header>
+    <nav>
+      <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">Property Pro</a>
+        <a href="#news"></a>
+        <a href="dashboard.html">Manage Ads</a>
+        <a href="signin.html">Log Out</a>
+        <a href="upload.html" class="signin">Upload</a>
+        <a href="javascript:void(0);" class="icon">&#9776;</a>
+      </div>
     </nav>
-    </footer>
-    <script src="javascript/index.js">
-    </script>
+  </header>
+  <main>
+    <div class="select-type">
+      <select name="categories" id="categories">
+        <option selected disabled> View categories </option>
+        <option value="Two-bedroom-flat">Two-bedroom flat</option>
+        <option value="Three-bedroom-flat">Three-bedroom flat</option>
+        <option value="Four-bedroom-flat">Four-bedroom flat</option>
+        <option value="Mini-flat">Mini flat</option>
+        <option value="Four-bedroom-duplex">Four-bedroom duplex</option>
+        <option value="Five-bedroom-duplex">Five-bedroom duplex</option>
+      </select>
+    </div>
+    <div class="cover-image">
+      <img src="images/photos/cover4.png" alt="cover image">
+    </div>
+    <P id="caption">Fresh Arrivals</P>
+    <div class="rows">
+      <div class="column-left">
+        <div class="left-sidebar">
+
+        </div>
+      </div>
+      <div class="column-right">
+        <div class="right-sidebar">
+          <div class="featured">
+            <h3>Featured</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <nav>
+      <div class="navigation">
+        <a href="#">About </a>
+        <a href="#">Contact </a>
+        <a href="#">Policy </a>
+      </div>
+    </nav>
+  </footer>
+  <script src="javascript/index.js">
+  </script>
 </body>
+
 </html>
