--- a/UI/update_property.html
+++ b/UI/update_property.html
@@ -59,11 +59,11 @@
                                         <div class="image-wrap">
                                             <div class="close-button"><img src="" title="delete this image" alt="">
                                             </div>
-                                            <img  id="property-image">
+                                            <img id="property-image">
                                         </div>
                                         <div class="image-wrap">
                                             <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img  id="property-image">
+                                            <img id="property-image">
                                         </div>
                                         <div class="image-wrap">
                                             <div class="close-button"><img title="delete this image" alt=""></div>
@@ -75,18 +75,18 @@
                                         </div>
                                         <div class="image-wrap">
                                             <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <img src="images/icons/addImage.png" id="property-image" alt="ADD">
+                                        </div>
+                                        <div class="image-wrap">
+                                            <div class="close-button"><img title="delete this image" alt="ADD"></div>
                                             <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <div class="close-button"><img title="delete this image" alt="ADD"></div>
                                             <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                         <div class="image-wrap">
-                                            <div class="close-button"><img title="delete this image" alt=""></div>
-                                            <img src="images/icons/addImage.png" id="property-image">
-                                        </div>
-                                        <div class="image-wrap">
-                                            <div class="close-button"><img title="delete this image" alt=""></div>
+                                            <div class="close-button"><img title="delete this image" alt="ADD"></div>
                                             <img src="images/icons/addImage.png" id="property-image">
                                         </div>
                                     </div>
