bug(add alt text to all images): [finishes #166812173]

--- a/UI/update_property.html
+++ b/UI/update_property.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="topnav" id="myTopnav">
-                <a href="index" class="active">Property Pro</a>
+                <a href="index.html" class="active">Property Pro</a>
                 <a href="#news"></a>
                 <a href="dashboard.html">Manage Ads</a>
                 <a href="signin.html">Log Out</a>
