chore(added comments the source codes): [finishes #166812203]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -91,7 +91,7 @@
               <p class="wrongWord">Michae</p>
             </div>
             <div class="answer word">
-              <input type="text" class="myAnswer"> <span>Try another</span>
+              <input type="text" class="myAnswer"> <a href="javascript:void(0);">Try another challenge</a>
             </div>
           </div>
           <p>Already registered? <a href="signin.html">Login here</a></p>
