--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="email-user"><span>Email Seller</span></div>
                     <div class="contact-icon">
-                        <div class="icon-wrapper"><img src="images/iconsphone.png" alt="PHONE"></div>
+                        <div class="icon-wrapper"><img src="images/icons/phone.png" alt="PHONE"></div>
                         <div class="contact-name">
                             <p>08745698542</p>
                         </div>
