--- a/UI/signin.html
+++ b/UI/signin.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="topnav" id="myTopnav">
-        <a href="index.html" class="active">Property Pro</a>
+        <a href="index.html" class="active">Property Pro Lite</a>
         <a href="#news"></a>
         <a href="signup.html">Join Us</a>
         <a href="signup.html">Sign Up</a>
