bug(fix homepage responsiveness): replaced the homepage image cover with text on smaller screens

--- a/UI/index.html
+++ b/UI/index.html
@@ -36,6 +36,10 @@
       </select>
     </div>
     <div class="cover-image">
+      <div class="page-intro">
+      <div><h2>Welcome to Property Pro Lite</h2></div>
+      <div><p>Best Choice for property deals</p></div>
+      </div>
       <img src="images/photos/cover4.png" alt="cover image">
     </div>
     <P id="caption">Fresh Arrivals</P>
