--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -79,7 +79,14 @@
                     <p></p>
                     <p>Location</p>
                     <p>Awka , Anambra</p>
-                    <div class="map-wrapper"><img src="images/photos/googlemap.jpg" alt="google map"></div>
+                    <div class="map-wrapper">
+                        <div class="mapouter">
+                            <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+                                    src="https://maps.google.com/maps?q=university%20of%20san%20francisco&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                                    href="https://www.yellowrocketagency.com">Yellow Rocket Agency</a></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="report-ad"><a href="javascript:void(0);">report this ad</a></div>
                 <form action="/report_post" method="POST" class="report-form form-hide">
