bug(responsiveness fix):make the contact seller email button responsive on the view property page [finishes #166812237]

--- a/UI/view_property.html
+++ b/UI/view_property.html
@@ -80,12 +80,7 @@
                     <p>Location</p>
                     <p>Awka , Anambra</p>
                     <div class="map-wrapper">
-                        <div class="mapouter">
-                            <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
-                                    src="https://maps.google.com/maps?q=university%20of%20san%20francisco&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                                    href="https://www.yellowrocketagency.com">Yellow Rocket Agency</a></div>
-                        </div>
+                            <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=awka%20anambra&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.yellowrocketagency.com">Yellow Rocket Agency</a></div></div>
                     </div>
                 </div>
                 <div class="report-ad"><a href="javascript:void(0);">report this ad</a></div>
